--- a/Untitled0.ipynb
+++ b/Untitled0.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO1QLht5CC2cp8XVyKY36Y7",
+      "authorship_tag": "ABX9TyM2ocdXJ4Ma0TQVmg1lXMlN",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2158,33 +2158,37 @@
         "import pandas as pd\n",
         "import matplotlib.pyplot as plt\n",
         "\n",
-        "# Load the dataset (replace 'winequality-red.csv' with your dataset file path)\n",
         "data = pd.read_csv('winequality-red.csv')\n",
         "\n",
-        "# Data preprocessing (select features and target)\n",
         "selected_features = ['fixed acidity', 'citric acid', 'residual sugar', 'chlorides']\n",
         "X = data[selected_features].values\n",
         "y = data['volatile acidity'].values\n",
         "\n",
-        "# Split the data into training and testing sets\n",
+        "\n",
         "split_ratio = 0.8\n",
         "split_index = int(split_ratio * len(X))\n",
         "X_train, X_test = X[:split_index], X[split_index:]\n",
         "y_train, y_test = y[:split_index], y[split_index:]\n",
         "\n",
-        "# Calculate linear regression coefficients\n",
+        "print(\"X_train shape:\",X_train.shape)\n",
+        "print(\"y_train shape:\",y_train.shape)\n",
+        "print(\"X_test shape:\",X_test.shape)\n",
+        "print(\"Y_test shape:\",y_test.shape)\n",
+        "\n",
+        "\n",
         "X_train_b = np.c_[np.ones((X_train.shape[0], 1)), X_train]\n",
         "w = np.linalg.inv(X_train_b.T.dot(X_train_b)).dot(X_train_b.T).dot(y_train)\n",
         "\n",
-        "# Make predictions on the test data\n",
+        "print(\"weights:\",w)\n",
+        "\n",
         "X_test_b = np.c_[np.ones((X_test.shape[0], 1)), X_test]\n",
         "y_pred = X_test_b.dot(w)\n",
         "\n",
-        "# Calculate Mean Squared Error (MSE) on Testing Data\n",
+        "\n",
         "mse = np.mean((y_pred - y_test) ** 2)\n",
         "print(\"Mean Squared Error (MSE) on Testing Data:\", mse)\n",
         "\n",
-        "# Plot the predictions vs. actual values with the regression line\n",
+        "\n",
         "plt.scatter(y_test, y_pred, marker='o', s=30, label='Actual vs. Predicted')\n",
         "plt.plot(y_test, y_test, color='red', linestyle='--', label='y=x')\n",
         "plt.xlabel(\"Actual quality\")\n",
@@ -2192,8 +2196,7 @@
         "plt.title(\"Linear Regression Predictions vs. Actual Data\")\n",
         "plt.legend()\n",
         "\n",
-        "# Add the regression line to the plot\n",
-        "#plt.plot(np.unique(y_test), np.poly1d(np.polyfit(y_test, y_pred, 1))(np.unique(y_test)), color='blue', label='Regression Line')\n",
+        "\n",
         "\n",
         "plt.legend()\n",
         "plt.show()\n"
@@ -2202,16 +2205,21 @@
         "id": "6FavYSsmf4JR",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 489
+          "height": 576
         },
-        "outputId": "99535ff4-733a-49ea-8369-c53a79b512a8"
+        "outputId": "47420fdc-a465-464a-b8b1-f45d7c2ae0ff"
       },
-      "execution_count": 6,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
+            "X_train shape: (1279, 4)\n",
+            "y_train shape: (1279,)\n",
+            "X_test shape: (320, 4)\n",
+            "Y_test shape: (320,)\n",
+            "weights: [ 0.43359149  0.0238763  -0.68378145  0.00895259  0.62575464]\n",
             "Mean Squared Error (MSE) on Testing Data: 0.02072210121765216\n"
           ]
         },
